version/0.31/_sources/api/solver/_autosummary/settings/aeromechanics_child.rst.txt
:orphan:

.. _aeromechanics_child:

aeromechanics_child
===================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.aeromechanics_child
    :show-inheritance:

.. rubric:: Attributes

============================================   ==============================================================================

Attribute                                                                                                             Summary

============================================   ==============================================================================
:ref:`name <name_2>`                                                                                      Name of the object.

:ref:`report_type <report_type>`                   The report type; the list may vary on the selected report definition type.

:ref:`zones <zones_2>`                                                                                         'zones' child.

:ref:`per_zone <per_zone>`                                                                                  'per_zone' child.

:ref:`nodal_diameters <nodal_diameters>`                                                             'nodal_diameters' child.

:ref:`average_over <average_over>`                                                                      'average_over' child.

:ref:`integrate_over <integrate_over>`                                                                'integrate_over' child.

:ref:`normalization <normalization>`                                                                   'normalization' child.

:ref:`realcomponent <realcomponent>`                                                                   'realcomponent' child.

:ref:`output_parameter <output_parameter_1>`               Option to make report definition available as an output parameter.

============================================   ==============================================================================

.. rubric:: Methods

========================================================   ======================================================================

Method                                                                                                                    Summary

========================================================   ======================================================================
:ref:`create_output_parameter <create_output_parameter>`       Option to make report definition available as an output parameter.

========================================================   ======================================================================

.. rubric:: Included in:

====================================   =======================================================

Parent                                                                                 Summary

====================================   =======================================================
:ref:`aeromechanics <aeromechanics>`       Create a new or edit an existing report definition.

====================================   =======================================================

