version/0.37/_sources/api/solver/_autosummary/settings/aeromechanics_child.rst.txt
:orphan:

.. _aeromechanics_child:

aeromechanics_child
===================

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.aeromechanics_child
    :show-inheritance:

.. rubric:: Attributes

==============================================   ==============================================================================

Attribute                                                                                                               Summary

==============================================   ==============================================================================
:ref:`name <name_4>`                                                                                        Name of the object.

:ref:`report_type <report_type>`                     The report type; the list may vary on the selected report definition type.

:ref:`zones <zones_2>`                                                                                           'zones' child.

:ref:`per_selection <per_selection>`                                                                     'per_selection' child.

:ref:`nodal_diameters <nodal_diameters>`                                                               'nodal_diameters' child.

:ref:`average_over <average_over>`                                                                        'average_over' child.

:ref:`integrate_over <integrate_over>`                                                                  'integrate_over' child.

:ref:`normalization <normalization>`                                                                     'normalization' child.

:ref:`realcomponent <realcomponent>`                                                                     'realcomponent' child.

:ref:`force_obj_name <force_obj_name>`                                                                  'force_obj_name' child.

:ref:`component_type <component_type>`                                                                  'component_type' child.

:ref:`output_parameter <output_parameter_1>`                 Option to make report definition available as an output parameter.

:ref:`create_report_file <create_report_file>`                                 Create a new file set for the report definition.

:ref:`create_report_plot <create_report_plot>`                                 Create a new plot set for the report definition.

==============================================   ==============================================================================

.. rubric:: Methods

========================================================   ======================================================================

Method                                                                                                                    Summary

========================================================   ======================================================================
:ref:`create_output_parameter <create_output_parameter>`       Option to make report definition available as an output parameter.

========================================================   ======================================================================

.. rubric:: Included in:

====================================   =======================================================

Parent                                                                                 Summary

====================================   =======================================================
:ref:`aeromechanics <aeromechanics>`       Create a new or edit an existing report definition.

====================================   =======================================================

